fix headline spacing

--- a/components/navigation.less
+++ b/components/navigation.less
@@ -33,6 +33,11 @@ nav#void-nav {
 	}
 }
 
+.mw-headline {
+	margin-top: -50px;
+	padding-top: 50px;
+}
+
 /* Hide, but keep accessible for screen-readers */
 #mw-navigation h2 {
 	position: absolute;
